Fix shortcut key for going to site root

--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -2,7 +2,7 @@
     <ul>
 
         <li class="navicon dropdown">
-            <a accesskey="h" href="#">≡</a>
+            <a href="#">≡</a>
             <div class="dropdown_content">
                 <a href="/news/president/">President</a>
                 <a href="/news/press/">Press Events</a>
@@ -34,7 +34,7 @@
         </li>
 
         <li class="title">
-            <a href="/">{{ site.title }}</a>
+            <a accesskey="h" href="/">{{ site.title }}</a>
         </li>
 
         {% if site.debug %}
