--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -456,7 +456,7 @@ div.top_margin_10 {
 }
 
 div.bottom_margin_10 {
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 div.bottom_margin_5 {
