Add horizontal space between news sections

--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -63,22 +63,20 @@ div.section_container {
             height: 340px;
             min-height: 340px;
         }
-
+        
         @include max-screen(720px) {
+            margin-right: 0;
             width: 100%;
             max-width: 100%;
             min-width: 100%;
         }
         @include min-screen(720px + 1px) {
-            // one-third of parent width less 2 margin right widths divided by 3
-            $container_width: calc(33.33% - 6.66px);
+            margin-right: 15px;
+            // one-third of parent width less 2 x margin right widths divided by 3
+            $container_width: calc(33.33% - 10px);
             width: $container_width;
+            min-width: $container_width;
             max-width: $container_width;
-        }
-
-        margin-right: 0;
-        @include min-screen(720px + 1px) {
-            margin-right: 10px;
         }
     }
 
