Add image bottom margin

--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -30,6 +30,7 @@ section.post_column_main {
                 }
             }
         }
+        margin-bottom: 10px;
     }
 
     div.video_container {
