--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -104,6 +104,98 @@ div.section_container {
             padding-top: 10px;
         }
     }
+    
+    & > div.no_right_margin {
+        margin-right: 0;
+    }
 
     // Contents are displayed in div.block
+}
+
+// For 2 left posts with image 1 right list posts no image
+
+div.section_container {
+    & > div.container_2n {
+        float: left;
+        
+        @include min-screen(720px + 1px) {
+            height: 340px;
+            min-height: 340px;
+            
+            height: auto;
+            min-height: 300px;
+        }
+        @include min-screen(720px + 1px) {
+            margin-right: 15px;
+            &:nth-of-type(3n) {
+                margin-right: 0;
+            }
+            // two-thirds of parent width less 2 x margin right widths divided by 3
+            $container_width: calc(66.66% - 10px);
+            width: $container_width;
+            min-width: $container_width;
+            max-width: $container_width;
+        }
+        
+        & > div.block > div.entries {
+            & > div.entry {
+            
+                @include max-screen(480px) {
+                    margin-bottom: 5px;
+                }
+                
+                & > img {
+                    @include max-screen(720px) {
+                        float: left !important;
+                        margin-right: 10px;
+                        width: calc(33.33% - 10px) !important;
+                    }
+                    @include max-screen(480px) {
+                        width: 40%;
+                        height: auto;
+                    }
+                    @include min-screen(720px + 1px) {
+                        float: left !important;
+                        margin-right: 10px;
+                        width: calc(33.33% - 10px) !important;
+                    }
+                }
+            }
+        }
+    }
+    
+    & > div.container_2n_list {
+        float: left;
+    
+        @include max-screen(720px) {
+            margin-right: 0;
+            width: 100%;
+            max-width: 100%;
+            min-width: 100%;
+        }
+        @include min-screen(720px + 1px) {
+            margin-right: 15px;
+            margin-right: 0;
+            &:nth-of-type(3n) {
+                margin-right: 0;
+            }
+            // one-third of parent width less 2 x margin right widths divided by 3
+            $container_width: calc(33.33% - 5px);
+            width: $container_width;
+            min-width: $container_width;
+            max-width: $container_width;
+        }
+        
+        & > div.block > div.entries {
+            & > div.entry {
+                margin-top: 0;
+                padding: 5px 0 5px 0;
+                border-top: 1px solid $color_hr_default;
+                
+                &:last-of-type {
+                    border-bottom: 1px solid $color_hr_default;
+                }
+            }
+        }
+    }
 }
