--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -114,6 +114,52 @@ section.post_column_main {
         line-height: $font_size_footnote_link;
         color: $color_footnote_link;
     }
+    
+    div.related_posts {
+        // Must be greater than paragraph margin
+        margin-bottom: 20px;
+
+        & > p {
+            margin: 0 0 6px 0;
+            @include max-screen(480px) {
+                margin-bottom: 10px;
+            }
+            padding: 0 0 0 10px;
+            border-left: 2px solid $color_link;
+            
+            display: block;
+            
+            &,
+            & > a {
+                @include set_font($font_page_text, $font_size_page_text + 2, $color_page_text);
+                line-height: $font_line_height_page_text + 5;
+                @include max-screen(720px) {
+                    @include set_font($font_page_text, $font_size_page_text + 2, $color_page_text);
+                    line-height: $font_line_height_page_text + 3;
+                }
+                @media print {
+                    @include set_font($font_page_text, $font_size_page_text + 3, $color_page_text);
+                    line-height: $font_size_page_text + 6;
+                }
+                font-weight: bold;
+            }
+            
+            & > a {
+                border-bottom: none;
+                &:hover {
+                    border-bottom: 1px dotted $color_link;
+                }
+            }
+
+            & > span.date {
+                @include set_font($font_size_page_meta, $font_size_page_meta, $color_page_text);
+                line-height: $font_line_height_page_meta;
+                @include max-screen(720px) {
+                    line-height: $font_line_height_page_meta + 2;
+                }
+            }
+        }
+    }
 
     div.footnotes {
         padding-top: 30px;
