Add all news index

--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -4,6 +4,8 @@
         <li class="navicon dropdown">
             <a href="#">≡</a>
             <div class="dropdown_content">
+                <a href="/news/">All News</a>
+                <hr>
                 <a href="/news/president/">President</a>
                 <a href="/news/press/">Press Events</a>
                 <a href="/news/economy/">Economy</a>
