--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -13,10 +13,10 @@
 //@import url("https://fonts.googleapis.com/css?family=Droid+Serif:normal,italic,normalitalic,bolditalic");
 
 @font-face {
-    font-family:    'Droid Serif';
-    src:            local('Droid Serif'),
-                    local('DroidSerif-Regular'),
-                    url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700);
+    font-family:    'Noto Serif';
+    src:            local('Noto Serif'),
+                    local('NotoSerif-Regular'),
+                    url(https://fonts.googleapis.com/css?family=Noto+Serif:400,700);
 }
 
 @font-face {
@@ -41,7 +41,7 @@
 }
 
 $font_serif:                "Liberation Serif", Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
-$font_serif_thin:           "Droid Serif", "Slabo 27px", Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
+$font_serif_thin:           "Noto Serif", "Droid Serif", "Slabo 27px", Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
 $font_sans:                 "Roboto", "Source Sans", "Lucida Sans", Helmet, Freesans, Helvetica, Arial, sans-serif;
 $font_sans_thin:            "Roboto Condensed", "Source Sans Pro", "Droid Sans", "Miriam Libre", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Helmet, Freesans, Helvetica, Arial, sans-serif;
 $font_monospace:            Consolas, Bitstream Vera Sans Mono, Lucida Console, "Courier New", "Courier", Terminal, monospace;
