--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -15,6 +15,8 @@
                 <a href="/news/foreign_affairs/">Foreign Affairs</a>
                 <a href="/news/other/">Other News</a>
                 <hr>
+                <a href="/topics/">All Topics</a>
+                <hr>
                 <a href="/topics/opinion">Opinions</a>
                 <a href="/topics/peace_process/">Peace Process</a>
                 <hr>
