More line height for index page news title

--- a/_sass/block.scss
+++ b/_sass/block.scss
@@ -143,6 +143,9 @@ div.block_default_fonts {
             h2, h2 > a {
                 @include block_entry_heading($font_hub_default_title, $font_size_hub_default_title, $color_hub_entry_title);
                 line-height: $font_line_height_hub_default_title + 2;
+                @include max-screen(480px) {
+                    line-height: $font_line_height_hub_default_title + 4;
+                }
                 padding-bottom: 2px;
             }
             h2 > a {
