Update include file section_list example

--- a/_includes/section_list.html
+++ b/_includes/section_list.html
@@ -5,7 +5,7 @@ Arguments:
 
 Example:
     {% assign section_posts = site.categories['opinion'] %}
-    {% include section_slideshow.html category="opinion" posts=section_posts %}
+    {% include section_list.html title="opinion" posts=section_posts %}
 {% endcomment %}
 
 <div class="block block_default_fonts">
