--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -64,7 +64,7 @@ div.section_container {
             min-height: 340px;
         }
 
-        @include max-screen(720px) {
+        @include max-screen(800px) {
             margin-right: 15px;
             &:nth-of-type(even) {
                 margin-right: 0;
@@ -82,8 +82,8 @@ div.section_container {
             max-width: 100%;
             min-width: 100%;
         }
-        
-        @include min-screen(720px + 1px) {
+
+        @include min-screen(800px + 1px) {
             margin-right: 15px;
             &:nth-of-type(3n) {
                 margin-right: 0;
@@ -99,9 +99,22 @@ div.section_container {
     // Class(es) used with div.container
 
     & > div.container_top_border_thin {
-        @include min-screen(720px + 1px) {
+
+        border-top: none;
+        padding-top: 10px;
+
+        @include min-screen(480px + 1) {
             border-top: 1px solid $color_primary;
-            padding-top: 10px;
+            &:nth-child(-n+2) {
+                border-top: none;
+            }
+        }
+       
+        @include min-screen(800px + 1px) {
+            border-top: 1px solid $color_primary;
+            &:nth-child(-n+3) {
+                border-top: none;
+            }
         }
     }
     
@@ -118,10 +131,22 @@ div.section_container {
     & > div.container_2n {
         float: left;
         
-        @include min-screen(720px + 1px) {
+        @include max-screen(1024px) {
             height: auto;
+            margin-right: 15px;
+            &:nth-of-type(3n) {
+                margin-right: 0;
+            }
+            // two-thirds of parent width less 2 x margin right widths divided by 3
+            //$container_width: calc(66.66% - 10px);
+            $container_width: 100%;
+            width: $container_width;
+            min-width: $container_width;
+            max-width: $container_width;
         }
-        @include min-screen(720px + 1px) {
+
+        @include min-screen(1024px + 1px) {
+            height: auto;
             margin-right: 15px;
             &:nth-of-type(3n) {
                 margin-right: 0;
@@ -139,30 +164,36 @@ div.section_container {
                 @include max-screen(480px) {
                     margin-bottom: 5px;
                 }
-                
-                // One-third less margin plus offset
-                // The offset was added to "align" or not make the bottom end of the image
-                // higher than the bottom of a 4-liner text
+
                 & > img {
-                    /*
-                    @include max-screen(720px) {
-                        float: left !important;
-                        margin-right: 10px;
-                        width: calc(33.33% - 10px + 5px) !important;
-                    }
-                    */
+                    height: auto;
                     @include max-screen(480px) {
                         float: right !important;
-                        // The same margins under div.container block
-                        margin: 0 0 3px 10px;
+                        margin-bottom: 3px;
+                        margin-left: 10px;
                         width: 35% !important;
-                        height: auto;
                     }
                     @include min-screen(480px + 1px) {
                         float: left !important;
+                        margin-bottom: 10px;
                         margin-right: 10px;
-                        width: calc(33.33% - 10px  + 5px) !important;
+                        // The offset was added to "align" or not make the bottom end of
+                        // the image higher than the bottom of a 4-liner text
+                        width: calc(30% - 10px + 5px) !important;
                     }
+                    @include min-screen(720px + 1px) {
+                        // The offset was added to "align" or not make the bottom end of
+                        // the image higher than the bottom of a 4-liner text
+                        width: calc(33.33% - 10px  + 10px) !important;
+                    }
+                    @include min-screen(768px) {
+                        width: 200px !important;
+                    }
+                }
+                
+                & > h2,
+                & > p {
+                    //float: left;
                 }
             }
         }
