--- a/_includes/section_index.html
+++ b/_includes/section_index.html
@@ -11,16 +11,23 @@ Example:
 
 {% include todo_list.html todo_data=include.todo_data %}
 
+{% assign show_items = "" | split: "" %}
+{% assign show_items = show_items | push: "date" %}
+{% assign show_items = show_items | push: "excerpt" %}
+{% assign show_items = show_items | push: "thumbnail" %}
+
 <div class="section_container_wrapper section_container_wrapper_border bottom_margin_10">
 <h1>{{ page.title }}</h1>
 <div class="section_container top_margin_10">
     {% for post in site.categories[include.category] limit:3 %}
-        {% if forloop.index < 3 %}
-    <div class="container">
-        {% else %}
-    <div class="container no_right_margin">
-        {% endif %}
-        {% include post_entry.html post=post post_image=include.post_image %}
+        {% if forloop.index < 3 %}<div class="container">{% else %}<div class="container no_right_margin">{% endif %}
+        <div class="block block_margin_bottom block_default_fonts">
+            <div class="entries">
+                <div class="entry entry_highlight">
+                    {% include block_entry.html post=post show=show_items %}
+                </div>
+            </div>
+        </div>
     </div>
     {% endfor %}
 </div>
@@ -47,6 +54,7 @@ Example:
 {% else %}
                 <div class="index_entry">
 {% endif %}
+
                     <h2><span class="date">{{ post.date | date: site.data.format.short_date }}</span>&nbsp;-&nbsp;<a href="{{ post.url }}">{{ post.title }}</a>{% if post.video.source != nil %}&nbsp;&nbsp;<i class="fa fa-video-camera" aria-hidden="true"></i>{% endif %}</h2>
                     {% if site.debug %}
                     <p class="excerpt">{{ post.excerpt }}{% if post.video.source != nil %} <i class="fa fa-video-camera" aria-hidden="true"></i>{% endif %}</p>
