--- a/_sass/block.scss
+++ b/_sass/block.scss
@@ -42,59 +42,71 @@ div.block {
             font-style: italic;
         }
 
+        & > ul,
+        & > ol {
+            display: block;
+            cursor: hand;
+            margin-top: 5px;
+            // No indent
+            padding-left: 20px;
+            &.list_style_none {
+                padding-left: 0;
+                & > li {
+                    padding-left: 0;
+
+                }
+            }
+
+            & > li.border_left {
+                border-left: 5px solid $color_hr_default;
+                padding-left: 5px;
+                margin-top: 5px;
+                margin-bottom: 4px;
+                &:hover {
+                    border-left: 5px solid $color_link;
+                }
+            }
+
+            & > li.border_top_and_bottom {
+                border-top: 1px dotted $color_hr_default;
+                &:last-of-type {
+                    border-bottom: 1px dotted $color_hr_default;
+                }
+                padding-top: 5px;
+                padding-bottom: 4px;
+            }
+        }
+
+        & > ul > li.entry,
+        & > ol > li.entry,
         & > div.entry,
         & > div.index_entry {
             width: 100%;
             float: left;
 
-            img {
-                float: right;
+            & > img {
                 border-radius: 3px;
-                filter: grayscale(100%);
-            }
-
-            img.image_thumbnail,
-            img.video_thumbnail {
-                width: 100%;
-                height: 100%;
-                margin-bottom: 5px;
-            }
-
-            img.image_thumbnail_left,
-            img.video_thumbnail_left,
-            img.image_thumbnail_right,
-            img.video_thumbnail_right {
-                width: 40%;
-                height: 40%;
-            }
-
-            img.image_thumbnail_left,
-            img.video_thumbnail_left {
-                margin-top: 3px;
-                margin-right: 10px;
-            }
-
-            img.image_thumbnail_right,
-            img.video_thumbnail_right {
-                margin-bottom: 3px;
-                margin-left: 10px;
-            }
-
-            img.image_thumbnail_right_mobile,
-            img.video_thumbnail_right_mobile {
-                @include max-screen(720px) {
-                    width: 35%;
-                    height: 35%;
+                height: auto;
+                @include max-screen(480px) {
+                    float: right;
                     margin-bottom: 3px;
                     margin-left: 10px;
+                    width: 35%;
+                }
+                @include min-screen(480px + 1px) {
+                    float: left;
+                    margin-bottom: 10px;
+                    margin-right: 10px;
+                    width: 100%;
                 }
             }
-
+            
             p {
-                @include compact;
+                margin: 0 !important;
+                padding: 0 !important;
             }
 
-            ul {
+            ul, ol {
                 margin-top: 2px;
                 padding-left: 25px;
                 li {
@@ -138,6 +150,8 @@ img.block_margin_right {
 
 div.block_default_fonts {
     div.entries {
+        & > ul > li.entry,
+        & > ol > li.entry,
         & > div.entry,
         & > div.index_entry {
             h2, h2 > a {
@@ -165,10 +179,10 @@ div.block_default_fonts {
                 }
             }
 
-            & > p,
-            & > li,
-            & > p > a,
-            & > li > a {
+            & p,
+            & li,
+            & p a,
+            & li a {
                 @include set_font($font_hub_default_text, $font_size_hub_default_text, $color_hub_entry_text);
                 @include max-screen(720px) {
                     font-size: $font_size_hub_default_text + 1;
@@ -178,8 +192,8 @@ div.block_default_fonts {
                     line-height: $font_line_height_hub_default_text + 4;
                 }
             }
-            & > p.date,
-            & > h2 > span.date {
+            & p.date,
+            & h2 span.date {
                 @include set_font($font_hub_default_date, $font_size_hub_default_date, $color_hub_entry_date);
                 @include max-screen(720px) {
                     font-size: $font_size_hub_default_date + 1;
@@ -189,7 +203,7 @@ div.block_default_fonts {
                     line-height: $font_line_height_hub_default_text + 2;
                 }
             }
-            & > p.excerpt {
+            & p.excerpt {
                 @include set_font($font_hub_default_excerpt, $font_size_hub_default_excerpt, $color_hub_entry_excerpt);
                 @include max-screen(720px) {
                     font-size: $font_size_hub_default_excerpt + 1;
@@ -223,6 +237,8 @@ div.block_default_fonts {
 
 div.block_compact_fonts {
     div.entries {
+        & > ul > li.entry,
+        & > ol > li.entry,
         & > div.entry,
         & > div.index_entry {
             h2, h2 > a {
