--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -82,7 +82,7 @@ header {
                 padding: 7px 11px 6px 11px;
                 padding: 6px 11px 5px 11px;
                 @include max-screen(720px) {
-                    padding-top: 8px;
+                    padding-top: 7px;
                 }
                 text-decoration: none;
                 text-transform: uppercase;
@@ -101,7 +101,7 @@ header {
         li a {
             font-family: $font_nav;
             font-size: $font_size_nav + 1;
-            font-weight: bold;
+            font-weight: normal;
             text-align: center;
             
             letter-spacing: 0.5px;
@@ -123,7 +123,9 @@ header {
         }
         
         li.navicon > a {
+            font-family: $font_serif;
             font-size: $font_size_site_title + 4;
+            font-weight: bold;
         }
 
         // Dropdown menu
@@ -142,7 +144,7 @@ header {
             border-bottom-left-radius: 4px;
             border-bottom-right-radius: 4px;
 
-            a {
+            & > a {
                 margin: 0 7px 0 7px;
                 // This is 1+ the padding-top setting above
                 padding-top: 7px;
@@ -152,6 +154,7 @@ header {
                 }
                 
                 font-size: $font_size_nav;
+                font-weight: normal;
                 text-align: left;
                 white-space: nowrap;
                 display: block;
