Change link text color on mouse hover

--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -115,6 +115,10 @@ section.post_column_main {
         color: $color_footnote_link;
     }
     
+    a:hover {
+        color: $color_link;
+    }
+    
     div.related_posts {
         // Must be greater than paragraph margin
         margin-bottom: 20px;
