--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -20,7 +20,7 @@ div.section_container_wrapper {
         @include max-screen(720px) {
             font-size: $font_size_label + 1;
         }
-        font-weight: bold;
+        font-weight: $font_weight_label;
         color: $color_main_bg;
         background: $color_sidebar_label;
         text-align: left;
@@ -33,7 +33,7 @@ div.section_container_wrapper {
 
     // Title background
     & > h1 {
-        $padding_top: 6px;
+        $padding_top: 4px;
         $padding_bottom: 4px;
         padding: $padding_top 11px $padding_bottom 10px;
         @include max-screen(720px) {
